--- a/Trabajo Practico I/index.html
+++ b/Trabajo Practico I/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h2>Alta de Empleados</h2>
-    <form method="POST" action="administracion.php">
+    <form method="POST" action="administracion.php" enctype="multipart/form-data">
         <table align="center">
             <tr>
                 <td><h4>Datos Personales</h4></td>
@@ -21,14 +21,23 @@
             <tr>
                 <td>DNI:</td>
                 <td><input type="number" id=txtDni name=txtDni min="1000000"></td>
+                <td>
+                    <span style="display:none" id="spanDni">*</span>
+                </td>
             </tr>
             <tr>
                 <td>Apellido:</td>
                 <td><input type="text" id=txtApellido name=txtApellido></td>
+                <td>
+                    <span style="display:none" id="spanApellido">*</span>
+                </td>
             </tr>
             <tr>
                 <td>Nombre:</td>
                 <td><input type="text" id=txtNombre name=txtNombre></td>
+                <td>
+                    <span style="display:none" id="spanNombre">*</span>
+                </td>
             </tr>
             <tr>
                 <td>Sexo:</td>
@@ -38,6 +47,9 @@
                         <option value="M">Masculino</option>
                         <option value="F">Femenino</option>
                     </select>
+                </td>
+                <td>
+                    <span style="display:none" id="spanSexo">*</span>
                 </td>
             </tr>
             <tr>
@@ -49,10 +61,16 @@
             <tr>
                 <td>Legajo:</td>
                 <td><input type="number" id=txtLegajo name=txtLegajo></td>
+                <td>
+                    <span style="display:none" id="spanLegajo">*</span>
+                </td>
             </tr>
             <tr>
                 <td>Sueldo:</td>
                 <td><input type="number" id=txtSueldo name=txtSueldo step="500"></td>
+                <td>
+                    <span style="display:none" id="spanSueldo">*</span>
+                </td>
             </tr>
             <tr>
                 <td>Turno:</td>
@@ -71,6 +89,20 @@
                 <td colspan="2"><hr></td>
             </tr>
             <tr>
+                <td>
+                    Foto:
+                </td>
+                <td>
+                    <input type="file" name="selectFoto" id="selectFoto">
+                    <span style="display:none" id="spanFoto">*</span>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <hr>
+                </td>
+            </tr>
+            <tr>
                 <td align="right" colspan="2"><input type="reset" value="Limpiar"></td>
             </tr>
             <tr>
@@ -78,5 +110,6 @@
             </tr>
         </table>
     </form>
+    <a href="./cerrarSesion.php">Cerrar Sesion</a>
 </body>
 </html>
