TP Parte 5 Punto 7

--- a/Trabajo Practico I/index.html
+++ b/Trabajo Practico I/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>HTML 5 - Formulario Alta Empleado</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+
     <script type="text/javascript" src="javascript/funciones.js"></script>
 </head>
 <body>
@@ -93,7 +93,7 @@
                     Foto:
                 </td>
                 <td>
-                    <input type="file" name="selectFoto" id="selectFoto">
+                    <input type="file" name="foto" id="foto">
                     <span style="display:none" id="spanFoto">*</span>
                 </td>
             </tr>
